Fixed termpad spacing

--- a/timefree csharp/css/termpad/style.css
+++ b/timefree csharp/css/termpad/style.css
@@ -18,7 +18,7 @@
 .block {
     color: white;
     margin: 0 auto;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     height: 15%;
     min-height: 11%;
     max-height: 11%;
